samples/_failures_safe/1761349288_e5cad8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3a10255a.c: In function ‘state_to_string’:
./samples/SAFE/__tmp_3a10255a.c:147:42: error: missing terminating " character
  147 |         "IDLE", "READING", "PROCESSING", "WR
      |                                          ^~~
./samples/SAFE/__tmp_3a10255a.c:147:9: error: expected expression at end of input
  147 |         "IDLE", "READING", "PROCESSING", "WR
      |         ^~~~~~
./samples/SAFE/__tmp_3a10255a.c:147:9: error: expected declaration or statement at end of input
